# AutoProfiler

./: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  TROUBLESHOOTING.md  base.css  environment.yml  install.json  jupyterlite-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js  setup.py  tailwind.config.cjs  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: TEMP_build.yml  build.yml  check-release.yml  deploy_juplite.yml
_temp_extension/: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  package.json  pyproject.toml
_temp_extension/src/: index.ts
digautoprofiler/: __init__.py  _version.py  handlers.py  logger.py  profile_lib.py  utils.py
examples/: SF Housing Demo.ipynb  df_housing_sample.csv
jupyter-config/nb-config/: digautoprofiler.json
jupyter-config/server-config/: digautoprofiler.json
lib/: index.d.ts  index.js  index.js.map
lib/jupyter-hooks/: cell.d.ts  cell.js  cell.js.map  kernel.d.ts  kernel.js  kernel.js.map  notebook.d.ts  notebook.js  notebook.js.map
lib/panel-UI/: index.d.ts  index.js  index.js.map
src/: ProfileModel.ts  ProfilePanel.ts  ProfileView.ts  RillModel.ts  index.ts  stores.ts  svg.d.ts
src/common/: exchangeInterfaces.ts
src/components/: App.svelte  ColumnEntry.svelte  ColumnPreview.svelte  ColumnProfile.svelte  DFProfile.svelte  ProfileView.ts  (+4 more)
style/: base.css  index.css
(+134 files in other folders)
